# miepython

./: .gitignore  .gitmodules  .pages-ping  .readthedocs.yaml  .readthedocs.yml  .testignore  CHANGELOG.rst  CHANGELOG.txt  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  README.rst  README.txt  jupyter-lite.json  jupyter_lite_config.json  jupyter_lite_config.py  pyproject.toml  release.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  test_jit.py
.github/scripts/: update_citation.py
.github/workflows/: citation.yaml  pypi.yaml  test.yaml  test.yml  update_citation.yaml
api/contents/: all.json
api/contents/data/: all.json
api/contents/examples/: all.json
doc/: 01_basics.ipynb  02_efficiencies.ipynb  03_angular_scattering.ipynb  04_rayleigh.ipynb  05_fog.ipynb  06_random_deviates.ipynb  07_algorithm.ipynb  08_large_spheres.ipynb  09_backscattering.ipynb  10_basic_tests.ipynb  miepython_angular_scattering.ipynb  miepython_basics.ipynb  miepython_efficiencies.ipynb  miepython_fog.ipynb  miepython_random_deviates.ipynb
docs/: 01_basics.ipynb  02_efficiencies.ipynb  03_angular_scattering.ipynb  03a_normalization.ipynb  04_rayleigh.ipynb  05_fog.ipynb  06_random_deviates.ipynb  07_algorithm.ipynb  08_large_spheres.ipynb  09_backscattering.ipynb  10_basic_tests.ipynb  11_performance.ipynb  12_multipoles.ipynb  13_resonance.ipynb  14_boundary_conditions.ipynb  15_2D_fields.ipynb  conf.py  index.rst  miepython.rst  requirements.txt
docs/_static/: custom.css
docs/data/: generate_scattnlay_reference_fields.py  scattnlay_abs_E.npy  scattnlay_abs_H.npy  scattnlay_abs_X.npy  scattnlay_abs_Z.npy  scattnlay_nonabs_E.npy  scattnlay_nonabs_H.npy  scattnlay_reference_metadata.json
docs/images/: make_readme_images.py
examples/: miepython_algorithm.ipynb  miepython_basics.html  miepython_basics.ipynb  miepython_efficiencies.ipynb  miepython_fog.ipynb  miepython_random_deviates.ipynb
extensions/@jupyter-notebook/lab-extension/: package.json
extensions/@jupyter-notebook/lab-extension/static/: 568.4e5539dcfc2cb5fba348.js  592.8efc280b38c19d806d42.js  928.5f64e32eea3fdff54b70.js  93.4dd6ecfa9e6576499569.js  remoteEntry.e74d1be6a629c1764a05.js  third-party-licenses.json
extensions/@jupyterlite/pyodide-kernel-extension/: package.json
extensions/@jupyterlite/pyodide-kernel-extension/static/: 154.81c924409acaa4092327.js  154.81c924409acaa4092327.js.map  154.9feeb76655c460bb662b.js  154.9feeb76655c460bb662b.js.map  304.0bb9abc93cc92244ff25.js.map  352.199d03f2b99f4594a889.js  352.199d03f2b99f4594a889.js.map  378.d1d840acae39794fdecd.js  378.d1d840acae39794fdecd.js.map  620.52308b6425da4e3d805d.js  620.52308b6425da4e3d805d.js.map  644.0aaf73e0dfbb9d72d49a.js  644.0aaf73e0dfbb9d72d49a.js.map  932.bbfa408a2d47bc9eda2d.js  932.bbfa408a2d47bc9eda2d.js.map  remoteEntry.734e54654402309af788.js  remoteEntry.734e54654402309af788.js.map  remoteEntry.d6704cdc807d45819742.js  remoteEntry.d6704cdc807d45819742.js.map  third-party-licenses.json
extensions/@jupyterlite/pyodide-kernel-extension/static/pypi/: all.json  ipykernel-6.9.2-py3-none-any.whl  piplite-0.4.5-py3-none-any.whl  piplite-0.7.1-py3-none-any.whl  pyodide_kernel-0.4.5-py3-none-any.whl  pyodide_kernel-0.7.1-py3-none-any.whl  widgetsnbextension-3.6.999-py3-none-any.whl  widgetsnbextension-4.0.999-py3-none-any.whl
extensions/@jupyterlite/pyodide-kernel-extension/static/schema/: kernel.v0.schema.json
files/: 01_basics.ipynb  02_efficiencies.ipynb  03_angular_scattering.ipynb  03a_normalization.ipynb  04_rayleigh.ipynb  05_fog.ipynb  06_random_deviates.ipynb  07_algorithm.ipynb  08_large_spheres.ipynb  09_backscattering.ipynb  10_basic_tests.ipynb  11_performance.ipynb  12_multipoles.ipynb  13_resonance.ipynb  14_boundary_conditions.ipynb  14_fields.ipynb  15_2D_fields.ipynb
files/data/: Johnson.txt  scattnlay_abs_H.npy  scattnlay_nonabs_X.npy  segelstein81_index.txt
files/examples/: 01_dielectric.py  05_efield.txt
lab/: index.html  jupyter-lite.json
miepython/: 01_dielectric.py  CHANGELOG.txt  __init__.py  _backend.py  bessel.py  core.py  field.py  main.py  mie_jit.py  mie_nojit.py  miepython.py  miepython_jit.py  miepython_nojit.py  monte_carlo.py  rayleigh.py  setup.py  test.py  test_miepython.py  util.py  vsh.py
miepython/data/: ag-Johnson.txt
miepython/examples/: 01_dielectric.py  02_glass.py  03_droplets.py  04_gold.py  05_nearfield.py
miepython/miepython/: __init__.py  mie.py
miepython/test/: 02_glass.py  03_droplets.py  04_gold.py  test.py
pypi/: all.json  miepython-3.0.2-py3-none-any.whl  miepython-3.0.5-py3-none-any.whl  miepython-3.1.0-py3-none-any.whl  miepython-3.2.0-py3-none-any.whl
test/: test.py
tests/: conftest.py  test_all_examples.py  test_all_notebooks.py  test_bessel.py  test_field.py  test_field_speed.py  test_jit.py  test_jit_D.py  test_jit_abcd.py  test_jit_speed.py  test_mie.py  test_mie_backend_speed.py  test_nojit.py  test_nojit_D.py  test_nojit_abcd.py  test_nojit_speed.py  test_rayleigh.py  test_unpolarized_intensity.py  test_vsh.py  test_vsh_basic.py
