
[bdist_wheel]
universal=1

[metadata]
name = miepython
version = 2.1.0
author = Scott Prahl
author_email = scott.prahl@oit.edu
license = MIT
description = Mie scattering of a plane wave by a sphere
keywords =
    mie
    scattering
    rainbow
    droplet
    backscatter
    sphere
    nanoparticle
    sphere
    cloud
    phase function
    efficiency
    rayleigh
    backscattering
    
url = https://github.com/scottprahl/miepython.git

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = miepython
zip_safe = True
install_requires = 
    numpy
    matplotlib
    numba
