[metadata]
name = miepython
version = 2.2.3
author = Scott Prahl
author_email = scott.prahl@oit.edu
license = MIT
description = Mie scattering of a plane wave by a sphere
keywords =
    mie
    scattering
    rainbow
    droplet
    backscatter
    sphere
    nanoparticle
    sphere
    cloud
    phase function
    efficiency
    rayleigh
    backscattering
    
url = https://github.com/scottprahl/miepython.git

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

include_package_data = True
package_data = {'' : ['data/*.txt']}

[options]
packages = miepython
install_requires = 
    numpy
    matplotlib
    numba

[flake8]
ignore = W503, D212
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
    tests/test_jit.py:D100,D101,D102
    tests/test_nojit.py:D100,D101,D102
    tests/conftest.py:D100,D101,D102,D103
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 99
docstring-convention = google
