[metadata]
description = Mie scattering of a plane wave by a sphere
keywords =
    mie
    scattering
    rainbow
    droplet
    backscatter
    sphere
    nanoparticle
    sphere
    cloud
    phase function
    efficiency
    rayleigh
    backscattering

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = miepython
install_requires = 
    numpy
    matplotlib
    numba

[options.package_data]
miepython =
  data/*.txt

[flake8]
ignore = W503, D212, N802, N803, N806, E501
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
    tests/test_mie.py:D100,D101,D102
    tests/conftest.py:D100,D101,D102,D103
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 110
docstring-convention = google
